# MechLabs_AHU

./: .gitmodules  EclipseMosquitto.md  MechLabs_AHU.code-workspace  README.md  start_hvac.sh
AHU_Firmware/: CMakeLists.txt  README_Pins.md  Readme.md  complete.txt  main_gen.txt  main_i2c.txt  partitions.csv  test_ws.py
AHU_Firmware/components/TestComp/: CMakeLists.txt  TestComp.c
AHU_Firmware/main/: CMakeLists.txt  cmd.py  main.cpp  room_main.cpp
Dashboard/: main.py  package-lock.json  package.json
Dashboard/src/: App.tsx  index.css  main.tsx
Dashboard/src/components/: Header.tsx  InformationWidget.tsx  SplashScreen.tsx  TaskBar.tsx
Dashboard/src/components/AHU/: AHUComponents.tsx  AHULive.tsx  AmbientAirCluster.tsx
Dashboard/src/components/Control/: ControlKnob.tsx  ControlSlider.tsx  ControlToggle.tsx  SystemControllerPanel.tsx
Dashboard/src/components/HVAC_CONTROLLER/: ControlKnob.tsx  ControlToggle.tsx  SetPoint.tsx  index.tsx
Dashboard/src/components/HVAC_SCADA/: AHUComponents.tsx  index.tsx
Dashboard/src/components/LiveDash/: AHUComponents.tsx
Dashboard/src/components/Log/: DataRecordPanel.tsx  LogWidget.tsx
Dashboard/src/pages/: ControlPanel.tsx  Credit.tsx  Dashboard.tsx  DataRecord.tsx  LiveMonitor.tsx  LiveMonitorV1.tsx
Dashboard/src/utils/: TelemetryContext.tsx  colors.ts  db.ts  dummyData.ts  types.ts
FastAPI/: main.py
Firmware/: CMakeLists.txt
Firmware/main/: AhuWifiManager.cpp  AhuWifiManager.h  CMakeLists.txt  HardwareUtils.cpp  HardwareUtils.h  InputTask.cpp  InputTask.h  MainAHUHub.cpp  MainVavController.cpp  OutputTask.cpp  OutputTask.h  PcaTask.cpp  PcaTask.h  PinConfig.h  SensorConfig.h  StateManager.cpp  StateManager.h  VavWifiManager.cpp  VavWifiManager.h  idf_component.yml
Firmware/main/old/: AHU_Hub.cpp  Vav_Controller.cpp
